# sharelatex-isolation

./: .gitignore  CMakeLists.txt  README.md  missing_syscalls.txt
src/: config.h.in  file_stat.c  file_stat.h  iostat.c  isolation.c  isolation.h  logfile.c  logfile.h  overloaded.c  params.c  params.h  parse.c  shareiso.c  whitelist.c  whitelist.h
test/: main-d.tex  main.tex  main2.tex  spookie1.tex  spookie2.tex  spookie3.tex  test.test  test2.sh  test3ls.sh  test4.sh  test4n.sh
whitelist/: test.c  test2.c  whitelist.c
